--- a/vignettes/avotrex-r-package.Rmd
+++ b/vignettes/avotrex-r-package.Rmd
@@ -26,25 +26,21 @@ Sayol et al. (IN PREP) The global loss of avian functional and phylogenetic dive
 Holocene and Late Pleistocene
 
 ## BACKGROUND
-Hundreds of bird species have gone extinct due to both natural and anthropogenic factors, with anthropogenic factors alone resulting in the extinction of thousands of vertebrate species (Dirzo et al., 2014; Ceballos et al., 2015; Di Marco et al., 2018; Otto, 2018; Tollefson, 2019). Birds are one such impacted group of vertebrates. Many iconic bird extinctions, such as the Dodo (Raphus cucullatus), the Elephant Birds (an entire order with 3 species), and the Moas (entire order, with at least 6 species) serve as poignant examples of the species driven extinct by human activities. 
-
-Including extinct species in ecological research can provide a more complete and less biased understanding of the evolution, distribution and function of biodiversity (González-Suárez et al., 2012; Boyer & Jetz, 2014; Helmus et al., 2014; Faurby & Svenning, 2015; Triantis et al., 2022; Matthews et al., 2023). Indeed, it is widely acknowledged that several macroevolutionary and macroecological patterns have been impacted by recent species extinctions. For example, islands systems are known to have suffered a disproportionate number of extinctions (Whittaker et al., 2023). These losses have impoverished insular avian radiations (Illera et al., 2024), decreased the functional alpha (Sobral et al., 2016; Sayol et al., 2021) and beta-diversity (Soares et al., 2022) of islands and archipelagos, and changed the form of the island diversity–area relationship (Matthews et al., 2022).While attempts to include extinct bird species and their traits has been made (e.g., Sobral et al., 2016; Sayol et al., 2021; Matthews et al., 2022, 2023; Soares et al., 2022; Triantis et al., 2022), trait information for extinct species has remained scattered across the literature, or is only available for species from well-studied archipelago systems (Sobral et al., 2016; Sayol et al., 2021; Heinen et al., 2023). 
-
-To fill this gap, the AVOTREX database was compiled, representing a comprehensive repository of species-level traits for all known extinct bird species (*n = 605*) from the past 130,000 years to the present day, globally. The database provides valuable information on geographical location, species island endemicity, and several species-level traits, including flight ability, body mass and eight standard external morphological measurements (including measurements of the beak, tarsus, wing, and tail). These eight morphological measurements match AVONET, a recently published trait database of all extant birds (Tobias et al., 2022). The dataset also includes 22 skeletal measurements, which helped to infer the morphological trait values of species with subfossil remains. Additionally, AVOTREX provides a pipeline to graft extinct species onto supplied phylogentic trees, providing the means to quantify phylogentic diversity loss [@***]. This package (avotrex) allows a user to build trees using the AVOTREX database, build multiple trees in parallel, and plot a variety of tree types to display the created phylogenies. 
+The AVOTREX database represents a comprehensive repository of species-level traits for all known extinct bird species (*n = 605*) from the past 130,000 years to the present day, globally. The database provides valuable information on geographical location, species island endemicity, and several species-level traits, including flight ability, body mass and eight standard external morphological measurements. The AVOTREX project also aimed to generate a pipeline to graft extinct species onto supplied phylogenetic trees, providing the means to quantify phylogenetic diversity loss [@***]. This resulted in the 'avotrex' R package and the focus of this vignette. The package (avotrex) allows a user to build trees using the AVOTREX database, build multiple trees in parallel, and plot a variety of tree types to display the created phylogenies. It has been set up to work with the BirdTree set of phylogenies [@***]; however, it can be adapted to work with any taxonomy and phylogenetic backbone.
 
 
 ## METHODOLOGY AND FUNCTIONS
-The avotrex (extinct avian traits database) R package has been programmed using standard S3 methods and is 
-available on CRAN (version ***) and the development version on GitHub (joe-wayman/avotrex). The package 
+The avotrex R package has been programmed using standard S3 methods and is 
+available on CRAN (version 1.0.0) and the development version on GitHub (joe-wayman/avotrex). The package 
 includes a sample of the BirdTree phylogenetic trees of extant birds [@***] alongside the extinct traits 
-database, to allow users to build phylogentic trees incorporating the extinct species using the methodology 
+database, to allow users to build phylogenetic trees incorporating the extinct species using the methodology 
 detailed below and within [@***]. Further BirdTree phylogenies can be sourced from: https://birdtree.org/. Users can add species to the database allowing them to be included in produced trees (see "Adding new species" section, below). Therefore, this package represents a resource that allows users (i) to generate as many trees as needed, (ii) easily incorporate new species, (iii) modify codes and instructions provided for extinct species within the database and (iv) use a different phylogenetic tree as a base if other global bird phylogeneies become available. 
 
 ### Tree building - AvoPhylo
 
-To build trees, we use the AvoPhylo function within the package. The function provides an algorithmic pipeline to join species onto a provided phylogeny in a set order based on their known taxonomic affinities to currently extant and other extinct species. These instructions are provided as codes in the "Type" column of the "AvotrexPhylo" database. Each code joins the species to the tree in a set manner based on their known taxonomic affinities to currently extant and other extinct species (Table.1). Input phylogenies (i.e., BirdTree trees) must be of class phylo. As some species need to be joined before others due to their taxonomic relationships, the "Id_sps" column sets the order in which the species are to be joined. Furthermore, the column "phylo_id2" determines if species are part of groups consisting of close relatives whose exact taxonomic relationships are unknown. If the species are part of one of the groups, their joining order is randomized before the start of the grafting. Trees can also be randomly selected from a number of trees by giving the function a group of trees using the argument 'ctrees' and then defining a smaller number using 'Ntree'. 
+To build trees, we use the AvoPhylo function, which is the primary function within the package. The function provides an algorithmic pipeline to join species onto a provided phylogeny in a set order based on their known taxonomic affinities. These instructions are provided as codes in the "Type" column of the "AvotrexPhylo" database. Each code joins the species to the tree in a set manner based on their known taxonomic affinities to currently extant and other extinct species (Table.1). Input phylogenies (e.g., BirdTree trees) must be of class phylo. As some species need to be joined before others (e.g., the first representative of an extinct taxonomic order needs to be joined as a sister to an entire taxonomic order already in the tree), the "Id_sps" column sets the order in which the species are to be joined. Furthermore, the column "phylo_id2" determines if species are part of groups consisting of close relatives whose exact taxonomic relationships are unknown. If the species are part of one of the groups, their joining order is randomized before the start of the grafting.  
 
-As can be deduced by the randomisation of groups, potential randomization of trees, and the codes that graft species as a sister to a randomly selected species, genus, family, or order (Table.1) each tree produced is different. It is, therefore, useful to run the tree building and grafting a number of times to average out the randomization within them. To accommodate the need to produce large number of trees, the package allows the grafting on trees to be conducted in parallel on multiple cores (see 'n.cores' argument). Note that the function will run on one core as default and if only one tree is supplied. If more than one tree is used, a progress bar will be displayed so users can track the building, which is particularly useful when creating a large number of trees. 
+As can be deduced by the randomization of groups, the uncertainty inherent within the input trees, and the codes used to graft extinct species (Table.1), each tree produced is different. It is, therefore, useful to run the tree building and grafting a number of times to account for this uncertainty. To accommodate the need to produce large number of trees, the package allows the grafting to be conducted in parallel on multiple cores (see 'n.cores' argument). Note that the function will run on one core as default and if only one tree is supplied. If more than one tree is used, a progress bar will be displayed so users can track the building, which is particularly useful when creating a large number of trees. Trees for grafting can also be randomly selected from a number of input trees by giving the function a group of trees using the argument 'ctrees' and then defining a smaller number using 'Ntree'.
 
 Table. 1. Joining codes and definitions of how each joins the species onto the global phylogeny.
 
@@ -61,11 +57,10 @@ Table. 1. Joining codes and definitions of how each joins the species onto the g
  RGG2  | Random genus group 2        | Grafted to a randomly selected species from a group of genera (e.g. when all that is known is that the species is from a specific subfamily). Currently not used in the database, but the relevant functionality has been kept in the R script, as it could be useful for future studies. | 
  RFG   | Random family group         | Grafted to a randomly selected species from a given family                          |  
  RSGG  | Random sister genus group   | Grafted as sister to a randomly selected genus from a pre-defined group of genera   | 
- RSGG2 | Random sister genus group 2 | Grafted as sister to a randomly selected genus from a pre-defined family            |                                                                                                      
+ RSGG2 | Random sister genus group 2 | Grafted as sister to a randomly selected genus from a pre-defined family            |                                                                                                    
+Further information on the pipeline and the grafting procedure can be found in @***.
 
-Detailed information on the pipeline and the grafting procedure can be found in @***.
-
-```{r Tree building example, echo=TRUE, message=FALSE, warning=FALSE}
+```{r Tree building example, eval=FALSE}
 
 # Load package
 library(avotrex)
@@ -82,60 +77,66 @@ trees <- AvoPhylo(ctrees = BirdTree_trees,   # BirdTree tree(s)
                   Ntree = 2,                 # Number of trees
                   n.cores = 2)               # Number of cores
 
-## Plot only owls to show the extinct species grafted on
-plot(trees[[1]], 
-     avotrex = AvotrexPhylo, 
-     tax = BirdTree_tax,
-     order = "Strigiformes", 
-     tips = "extinct",
-     type = "fan", 
-     tip.color = "red", 
-     cex = 0.4)
-
 ```
 
+
 ## ADDING NEW SPECIES
-The avotrex package has been created to incorporate new species into the database as further extinctions are unearthed or further species go extinct. Here we provide an example of adding a species into the database for the simplest example, i.e., a species addition that makes no changes to the plotting order or grafting code of any other species in the database. For illustrative purposes we use a made up species *Vapor hams*.
+The avotrex package has been created to allow users to incorporate new extinct species into the database as further extinctions are unearthed or further species go extinct. Here we provide an example of adding a species into the database for the simplest example, i.e., a species addition that makes no changes to the plotting order or grafting code of any other species in the database. For illustrative purposes we use a made up species *Vapor hams*.
 
 ```{r Adding a new species, fig.height=6, fig.width=6, message=FALSE, warning=FALSE}
 
-## Species can be added last as adding it makes no changes to other taxonomic affinities and therefore, no  
-## change to the grafting order
-
 library(avotrex)
+#Create a new species to add to the main database; not the
+#values in the vector match the columns in AvotrexPhylo
 vaporhams <- c("x644", "x644", "FALSE", NA, "Vapor_hams",
                "Strigiformes", "Strigidae", "Athene",
                "STRIGIFORMES", "Strigidae", "Athene",
                "S", NA, NA, NA, "Athene", "noctua", NA)
-AvotrexPhylo2 <- rbind(AvotrexPhylo, vaporhams)
 
+#Just for speed, filter the main database just to include owls.
+#However, note that in this case, the 12 'AP' species are not
+#removed completely as they are already in BirdTree.
+AvotrexPhylo2 <- AvotrexPhylo[AvotrexPhylo$Order == 'Strigiformes',]
+
+#Add the new owl species. The species can be added as a final row
+#to AvotrexPhylo as adding it makes no changes to other
+#taxonomic affinities and therefore, no change to the grafting
+#order
+
+AvotrexPhylo3 <- rbind(AvotrexPhylo2, vaporhams)
+
+#Graft species to a Jetz tree
 trees <- AvoPhylo(ctrees = BirdTree_trees,
-                  avotrex = AvotrexPhylo2, 
+                  avotrex = AvotrexPhylo3, 
                   PER = 0.2, 
                   tax = BirdTree_tax,
-                  Ntree = 3,
-                  n.cores = 3, 
-                  cluster.ips = NULL)
+                  Ntree = 1)
 ```
-```{r Plotting the new species example, message=FALSE, warning=FALSE}
-##single species; two levels back
-plot(trees[[3]], 
-     avotrex = AvotrexPhylo2, 
+```{r Plotting the new species example, message=FALSE, warning=FALSE, dpi=300, fig.height=3, fig.width=4}
+##single species; 3 levels back
+plot(trees[[1]], 
+     avotrex = AvotrexPhylo3, 
      tax = BirdTree_tax,
      species = "Vapor_hams",
      tips = "all_dif",
      tips_col = c("red", "darkgreen"),
-     lvls = 2,
+     lvls = 3,
      type = "phylogram",
      cex = 0.6)
 
 ```
-Some species may have to be joined in a more complicated way, depending upon the taxonomic affinities with both extant and extinct species. For example, if a newly added species is a closer relative to a species than an extinct species currently in the database that has the code S (meaning it is joined as a sister) then both the types of grafting code and the grafting order need to be updated. The package authors can be contacted when assistance is needed adding single or multiple species. 
+Some species may have to be joined in a more complicated way, depending upon their taxonomic affinities with both extant and extinct species. For example, if a newly added species is a closer relative to a species than an extinct species currently in the database that has the code S (meaning it is joined as a sister) then both the types of grafting code and the grafting order need to be updated. The package authors can be contacted when assistance is needed adding single or multiple species. 
 
 ## PLOTTING
-The avotrex package, when loaded, provides the user with a number of ways to plot produced trees to visually examine or display the created relationships. Below we show a number of examples of what is possible using the plot function with a set of example trees provided within the package (treesEx). 
+The avotrex package, when loaded, provides the user with a number of ways to plot produced trees to visually examine or display the branching patterns. The function uses the ape package's 'plot.phylo' and can take any argument from that
+function (e.g. 'type' argument). Below we show a number of examples of what is possible using the plot function with a set of example trees provided within the package (treesEx).  
 
-Plotting all of the species can be messy due to the number of tips, but is useful to assess whole phylogenies. However, the 'type' argument plots the phylogeny as a fan, allowing for tidier visualization.  
+Note - if using the 'lvls' argument, a warning is 
+provided. This comes from the tidytree::tree_subset
+function and appears to be a bug (but the plot should be
+checked for sense).
+
+Plotting all extant and extinct species can be messy due to the number of tips, but it can be useful to assess whole phylogenies. However, the 'type' argument plots the phylogeny as a fan, allowing for tidier visualization.  
 ```{r}
 
 library(avotrex)
@@ -145,16 +146,16 @@ data(BirdTree_tax)
 data(AvotrexPhylo)
 data(treesEx)
 
-#all species - no tip names
-plot(treesEx[[1]], 
-     avotrex = AvotrexPhylo, 
-     tax = BirdTree_tax,
-     tips = "none",
-     type = "fan")
+# #all species - no tip names
+# plot(treesEx[[1]], 
+#      avotrex = AvotrexPhylo, 
+#      tax = BirdTree_tax,
+#      tips = "none",
+#      type = "fan")
 
 ```
-Users can select a specific order, family, or genus to plot. The tip labels can be changed to show only extinct species labels ("extinct"), all of the species in the same colour ("all_same"), all of the species, but with extinct labels in a separate colour ("all_dif") or no labels ("none"). 
-```{r}
+Users can select a specific order, family, or genus to plot. The tip labels can be changed to show only extinct species labels ("tips == extinct"), all of the species in the same colour ("all_same"), all of the species, but with extinct labels in a separate colour ("all_dif") or no labels ("none"). 
+```{r, dpi=300, fig.height=6, fig.width=6}
 #order (owls) - just show extinct tip names (in red) and using
 #a fan plot
 plot(treesEx[[1]], 
@@ -166,19 +167,8 @@ plot(treesEx[[1]],
      tip.color = "red", 
      cex = 0.4)
 ```
-If all trees are supplied within the plot function, then each tree is returned in turn.
-```{r}
-#family (plot all three trees this time)
-plot(treesEx, 
-     avotrex = AvotrexPhylo, 
-     tax = BirdTree_tax,
-     family = "Threskiornithidae", 
-     tips = "extinct",
-     tip.color = "red", 
-     cex = 0.5)
 
-```
-```{r}
+```{r, dpi=300, fig.height=5}
 #genus - cladogram plot
 plot(treesEx[[1]], 
      avotrex = AvotrexPhylo, 
@@ -189,8 +179,22 @@ plot(treesEx[[1]],
      tip.color = "red", 
      cex = 0.5)
 ```
+
+If multiple trees are supplied to the plot function, then each tree is returned in turn.
+```{r, dpi=300, fig.height=5, fig.width=5}
+#family (plot all three trees this time)
+plot(treesEx, 
+     avotrex = AvotrexPhylo, 
+     tax = BirdTree_tax,
+     family = "Threskiornithidae", 
+     tips = "extinct",
+     tip.color = "red", 
+     cex = 0.5)
+
+```
+
 As well as taxonomic groups, the plot function can also take a list of species. 
-```{r}
+```{r, dpi=300}
 #species (& show all tip names in same colour)
 species2 <- c("Anas_itchtucknee", "Anas_sp_VitiLevu",
               "Anas_platyrhynchos", "Ara_tricolor")
@@ -200,7 +204,7 @@ plot(treesEx[[2]], avotrex = AvotrexPhylo, tax = BirdTree_tax,
      type = "cladogram",
      tip.color = "blue", cex = 0.5)
 ```
-```{r}
+```{r, dpi=300}
 #same as previous, but extinct and extant diff colours
 plot(treesEx[[2]], avotrex = AvotrexPhylo, tax = BirdTree_tax,
      species = species2,
@@ -209,7 +213,7 @@ plot(treesEx[[2]], avotrex = AvotrexPhylo, tax = BirdTree_tax,
      type = "cladogram")
 ```
 Lastly, the plot function can take a single species, with the number of levels of the tree it includes determined by the 'lvls' argument.
-```{r message=FALSE, warning=FALSE}
+```{r, dpi=300, message=FALSE, warning=FALSE}
 ##single species only 1 level back
 plot(treesEx[[3]], avotrex = AvotrexPhylo, tax = BirdTree_tax,
      species = "Ara_tricolor",
@@ -219,7 +223,7 @@ plot(treesEx[[3]], avotrex = AvotrexPhylo, tax = BirdTree_tax,
      type = "phylogram",
     cex = 0.6)
 ```
-```{r message=FALSE, warning=FALSE}
+```{r, dpi=300, message=FALSE, warning=FALSE}
 #increase levels back
 plot(treesEx[[3]], avotrex = AvotrexPhylo, 
      tax = BirdTree_tax,
