making treesEx smaller for CRAN

--- a/vignettes/avotrex-r-package.Rmd
+++ b/vignettes/avotrex-r-package.Rmd
@@ -182,7 +182,7 @@ plot(treesEx[[1]],
 
 If multiple trees are supplied to the plot function, then each tree is returned in turn.
 ```{r, dpi=300, fig.height=5, fig.width=5}
-#family (plot all three trees this time)
+#family (plot all two trees this time)
 plot(treesEx, 
      avotrex = AvotrexPhylo, 
      tax = BirdTree_tax,
@@ -215,7 +215,7 @@ plot(treesEx[[2]], avotrex = AvotrexPhylo, tax = BirdTree_tax,
 Lastly, the plot function can take a single species, with the number of levels of the tree it includes determined by the 'lvls' argument.
 ```{r, dpi=300, message=FALSE, warning=FALSE}
 ##single species only 1 level back
-plot(treesEx[[3]], avotrex = AvotrexPhylo, tax = BirdTree_tax,
+plot(treesEx[[2]], avotrex = AvotrexPhylo, tax = BirdTree_tax,
      species = "Ara_tricolor",
      tips = "all_dif",
      tips_col = c("red", "darkgreen"),
@@ -225,7 +225,7 @@ plot(treesEx[[3]], avotrex = AvotrexPhylo, tax = BirdTree_tax,
 ```
 ```{r, dpi=300, message=FALSE, warning=FALSE}
 #increase levels back
-plot(treesEx[[3]], avotrex = AvotrexPhylo, 
+plot(treesEx[[2]], avotrex = AvotrexPhylo, 
      tax = BirdTree_tax,
      species = "Ara_tricolor",
      tips = "all_dif",
