Adding ord argument and news file

--- a/vignettes/avotrex-r-package.Rmd
+++ b/vignettes/avotrex-r-package.Rmd
@@ -30,7 +30,7 @@ The AVOTREX database represents a comprehensive repository of species-level trai
 
 ## METHODOLOGY AND FUNCTIONS
 The avotrex R package has been programmed using standard S3 methods and is 
-available on CRAN (version 1.0.0); the development version is available on GitHub (joe-wayman/avotrex). The package 
+available on CRAN (version 1.1.0); the development version is available on GitHub (joe-wayman/avotrex). The package 
 includes a sample of the BirdTree phylogenetic trees of extant birds [@Jetz2012] alongside the extinct traits 
 database, to allow users to build phylogenetic trees incorporating the extinct species using the methodology 
 detailed below and within [@Sayol2024; @Matthews2024]. Further BirdTree phylogenies can be sourced from: https://birdtree.org/. Users can add species to the database allowing them to be included in the produced trees (see "Adding new species" section, below). Therefore, this package represents a resource that allows users to (i) generate as many trees as needed, (ii) easily incorporate new species, (iii) modify codes and instructions provided for extinct species within the database and (iv) use a different phylogenetic tree as a base if other global bird phylogenies become available. 
@@ -39,7 +39,7 @@ detailed below and within [@Sayol2024; @Matthews2024]. Further BirdTree phylogen
 
 To build trees, we use the AvoPhylo function, which is the primary function within the package. The function provides an algorithmic pipeline to join species onto a provided phylogeny in a set order based on their known taxonomic affinities. These instructions are provided as codes in the "Type" column of the "AvotrexPhylo" database. Each code joins the species to the tree in a set manner based on their known taxonomic affinities to currently extant and other extinct species (Table.1). Input phylogenies (e.g., BirdTree trees) must be of class 'phylo'. As some species need to be joined before others (e.g., the first representative of an extinct taxonomic order needs to be joined as a sister to an entire taxonomic order already in the tree), the "phylo_id2" column sets the order in which the species are to be joined. Species with the value 'xS' in the "phylo_id2" column are members of specific groups ('Group' column) which are grafted separately afterwards. The grafting order of species within groups is randomized before the start of the grafting. This accounts for the fact that there are numerous groups of species in the database for which using a pre-defined grafting order does not effectively account for the uncertainty related to their placement in the tree (e.g., Pacific rails). 
 
-As can be deduced by the randomization of groups, the uncertainty inherent within the input trees, and the codes used to graft extinct species (Table.1), each tree produced is different. It is, therefore, useful to run the tree building and grafting a number of times to account for this uncertainty. To accommodate the need to produce large number of trees, the package allows the grafting to be conducted on different trees in parallel on multiple cores (see the 'n.cores' argument). Note that the function will run on one core as default and if only one tree is supplied. If more than one tree is used, a progress bar will be displayed so users can track the building, which is particularly useful when creating a large number of trees. Trees for grafting can also be randomly selected from a number of input trees by giving the function a list of trees using the argument 'ctrees' and then defining a smaller number using 'Ntree'.
+As can be deduced by the randomization of groups, the uncertainty inherent within the input trees, and the codes used to graft extinct species (Table.1), each tree produced is different. It is, therefore, useful to run the tree building and grafting a number of times to account for this uncertainty. To accommodate the need to produce large number of trees, the package allows the grafting to be conducted on different trees in parallel on multiple cores (see the 'n.cores' argument). Note that the function will run on one core as default and if only one tree is supplied. If more than one tree is used, a progress bar will be displayed so users can track the building, which is particularly useful when creating a large number of trees. If more than one tree is provided as the input (using the argument 'ctrees'), trees for grafting can either be randomly selected from the input trees (setting the 'ord' argument to FALSE), or the input trees can (all) be selected in the same order as they are stored in 'ctrees' ('ord' = TRUE). In the former case, the 'Ntree' argument can be used to select a specific number of trees to be randomly sampled from 'ctrees', whereas in the latter case, 'Ntree' must equal the length of 'ctrees'.
 
 Table. 1. Joining codes and definitions of how each joins the species onto the global phylogeny.
 
