--- a/vignettes/avotrex-r-package.Rmd
+++ b/vignettes/avotrex-r-package.Rmd
@@ -37,7 +37,9 @@ detailed below and within [@Sayol2024; @Matthews2024]. Further BirdTree phylogen
 
 ### Tree building - AvoPhylo()
 
-To build trees, we use the AvoPhylo function, which is the primary function within the package. The function provides an algorithmic pipeline to join species onto a provided phylogeny in a set order based on their known taxonomic affinities. These instructions are provided as codes in the "Type" column of the "AvotrexPhylo" database. Each code joins the species to the tree in a set manner based on their known taxonomic affinities to currently extant and other extinct species (Table.1). Input phylogenies (e.g., BirdTree trees) must be of class 'phylo'. As some species need to be joined before others (e.g., the first representative of an extinct taxonomic order needs to be joined as a sister to an entire taxonomic order already in the tree), the "phylo_id2" column sets the order in which the species are to be joined. Species with the value 'xS' in the "phylo_id2" column are members of specific groups ('Group' column) which are grafted separately afterwards. The grafting order of species within groups is randomized before the start of the grafting. This accounts for the fact that there are numerous groups of species in the database for which using a pre-defined grafting order does not effectively account for the uncertainty related to their placement in the tree (e.g., Pacific rails). 
+To build trees, we use the AvoPhylo function, which is the primary function within the package. The function provides an algorithmic pipeline to join species onto a provided phylogeny in a set order based on their known taxonomic affinities. These instructions are provided as codes in the "Type" column of the "AvotrexPhylo" database. Each code joins the species to the tree in a set manner based on their known taxonomic affinities to currently extant and other extinct species (Table.1). Input phylogenies (e.g., BirdTree trees) must be of class 'phylo'. As some species need to be joined before others (e.g., the first representative of an extinct taxonomic order needs to be joined as a sister to an entire taxonomic order already in the tree), the "phylo_id2" column sets the order in which the species are to be joined. Species with the value 'xS' in the "phylo_id2" column are members of specific groups ('Group' column) which are grafted separately afterwards. The grafting order of species within groups is randomized before the start of the grafting. This accounts for the fact that there are numerous groups of species in the database for which using a pre-defined grafting order does not effectively account for the uncertainty related to their placement in the tree (e.g., Pacific rails). Finally, for a subset of species (primarily 
+those in older clades), we have constrained the grafting to take place at a 
+specific time point (value in the 'time_fixed' column) along a given branch, rather than at a randomly selected point. If, due to the topology of the underlying BirdTree tree, it is not possible to undertake this grafting along a given branch (i.e., the time point for grafting is either older than the parent node or younger than the child node, of a focal branch), we graft the species just below the parent node or just above the child node (using a default branch length of 0.1M years; this can be changed using the 'mindist' argument). For example, for the elephant birds, we constrained (as close as possible given the underlying tree) the split from Apterygiformes to occur at 54.16Mya, with the divergence of *Mullerornis* from the other species occurring at (or as near as possible to) 27.58Mya.
 
 As can be deduced by the randomization of groups, the uncertainty inherent within the input trees, and the codes used to graft extinct species (Table.1), each tree produced is different. It is, therefore, useful to run the tree building and grafting a number of times to account for this uncertainty. To accommodate the need to produce large number of trees, the package allows the grafting to be conducted on different trees in parallel on multiple cores (see the 'n.cores' argument). Note that the function will run on one core as default and if only one tree is supplied. If more than one tree is used, a progress bar will be displayed so users can track the building, which is particularly useful when creating a large number of trees. If more than one tree is provided as the input (using the argument 'ctrees'), trees for grafting can either be randomly selected from the input trees (setting the 'ord' argument to FALSE), or the input trees can (all) be selected in the same order as they are stored in 'ctrees' ('ord' = TRUE). In the former case, the 'Ntree' argument can be used to select a specific number of trees to be randomly sampled from 'ctrees', whereas in the latter case, 'Ntree' must equal the length of 'ctrees'.
 
@@ -87,7 +89,7 @@ The avotrex package has been created to allow users to incorporate new extinct s
 library(avotrex)
 #Create a new species to add to the main database; not the
 #values in the vector match the columns in AvotrexPhylo
-vaporhams <- c("x644", "x644", "FALSE", NA, "Vapor_hams",
+vaporhams <- c("x644", "x644", "FALSE", NA, NA, "Vapor_hams",
                "Strigiformes", "Strigidae", "Athene",
                "STRIGIFORMES", "Strigidae", "Athene",
                "S", NA, NA, NA, "Athene", "noctua", NA)
