--- a/vignettes/avotrex-r-package.Rmd
+++ b/vignettes/avotrex-r-package.Rmd
@@ -25,19 +25,21 @@ Matthews et al. (IN REVIEW) The global loss of avian functional and phylogenetic
 Sayol et al. (IN REVIEW) AVOTREX: A global dataset of extinct birds and their traits.
 
 ## BACKGROUND
-The AVOTREX database represents a comprehensive repository of species-level traits for all known extinct bird species (*n = 605*) from the past 130,000 years to the present day [@Sayol2024]. The database provides valuable information on geographical location, species island endemicity, and several species-level traits, including flight ability, body mass and eight standard external morphological measurements. The AVOTREX project also aimed to generate a pipeline to graft extinct species onto supplied phylogenetic trees, providing the means to quantify phylogenetic diversity loss [@Matthews2024]. This resulted in the 'avotrex' R package and the focus of this vignette. The package (avotrex) allows a user to build trees using the AVOTREX database, build multiple trees in parallel, and plot a variety of tree types to display the resultant phylogenies. It has been set up to work with the BirdTree set of phylogenies [@Jetz2012]; however, it can be adapted to work with any taxonomy and phylogenetic backbone.
+The AVOTREX database represents a comprehensive repository of species-level traits for all known extinct bird species (*n = 610*) from the past 130,000 years to the present day [@Sayol2024]. The database provides valuable information on geographical location, species island endemicity, and several species-level traits, including flight ability, body mass and eight standard external morphological measurements. The AVOTREX project also aimed to generate a pipeline to graft extinct species onto supplied phylogenetic trees, providing the means to quantify phylogenetic diversity loss [@Matthews2024]. This resulted in the 'avotrex' R package and the focus of this vignette. The package (avotrex) allows a user to build trees using the AVOTREX database, build multiple trees in parallel, and plot a variety of tree types to display the resultant phylogenies. It has been set up to work with the BirdTree set of phylogenies [@Jetz2012]; however, it can be adapted to work with any taxonomy and phylogenetic backbone.
 
 
 ## METHODOLOGY AND FUNCTIONS
 The avotrex R package has been programmed using standard S3 methods and is 
-available on CRAN (version 1.1.0); the development version is available on GitHub (joe-wayman/avotrex). The package 
+available on CRAN (version 1.3.0); the development version is available on GitHub (joe-wayman/avotrex). The package 
 includes a sample of the BirdTree phylogenetic trees of extant birds [@Jetz2012] alongside the extinct traits 
 database, to allow users to build phylogenetic trees incorporating the extinct species using the methodology 
 detailed below and within [@Sayol2024; @Matthews2024]. Further BirdTree phylogenies can be sourced from: https://birdtree.org/. Users can add species to the database allowing them to be included in the produced trees (see "Adding new species" section, below). Therefore, this package represents a resource that allows users to (i) generate as many trees as needed, (ii) easily incorporate new species, (iii) modify codes and instructions provided for extinct species within the database and (iv) use a different phylogenetic tree as a base if other global bird phylogenies become available. 
 
 ### Tree building - AvoPhylo()
 
-To build trees, we use the AvoPhylo function, which is the primary function within the package. The function provides an algorithmic pipeline to join species onto a provided phylogeny in a set order based on their known taxonomic affinities. These instructions are provided as codes in the "Type" column of the "AvotrexPhylo" database. Each code joins the species to the tree in a set manner based on their known taxonomic affinities to currently extant and other extinct species (Table.1). Input phylogenies (e.g., BirdTree trees) must be of class 'phylo'. As some species need to be joined before others (e.g., the first representative of an extinct taxonomic order needs to be joined as a sister to an entire taxonomic order already in the tree), the "phylo_id2" column sets the order in which the species are to be joined. Species with the value 'xS' in the "phylo_id2" column are members of specific groups ('Group' column) which are grafted separately afterwards. The grafting order of species within groups is randomized before the start of the grafting. This accounts for the fact that there are numerous groups of species in the database for which using a pre-defined grafting order does not effectively account for the uncertainty related to their placement in the tree (e.g., Pacific rails). Finally, for a subset of species (primarily 
+To build trees, we use the AvoPhylo function, which is the primary function within the package. The function provides an algorithmic pipeline to join species onto a provided phylogeny in a set order based on their known taxonomic affinities. These instructions are provided as codes in the "type" column of the "AvotrexPhylo" database. Each code joins the species to the tree in a set manner based on their known taxonomic affinities to currently extant and other extinct species (Table.1). Input phylogenies (e.g., BirdTree trees) must be of class 'phylo'. Some species need to be joined before others (e.g., the first representative of an extinct taxonomic order needs to be joined as a sister to an entire taxonomic order already in the tree). This ordering is controlled through the “sp_id”, “phylo_id” and “group” columns in the "AvotrexPhylo" database. Before grafting, the database is ordered by the “sp_id” column, with the “phylo_id” and “group” columns used to filter out particular groups of species (i.e., those with the value 'xS' in the "phylo_id" column) to be grafted in different orders. The grafting order of species within these groups is randomized before the start of the grafting. This accounts for the fact that there are numerous groups of species in the database for which using a pre-defined grafting order does not effectively account for the uncertainty related to their placement in the tree (e.g., Pacific rails). The “xS” code and Group ID numbers are also used to graft species in particular clades (e.g., the moa) in a specific order by including decimals in the Group ID number (e.g., a hypothetical three species clade given the “group” values of 99.1, 99.2, 99.3, where the species with “group” = 99.1 will be grafted first, and so on). 
+
+For a subset of species (primarily 
 those in older clades), we have constrained the grafting to take place at a 
 specific time point (value in the 'time_fixed' column) along a given branch, rather than at a randomly selected point. If, due to the topology of the underlying BirdTree tree, it is not possible to undertake this grafting along a given branch (i.e., the time point for grafting is either older than the parent node or younger than the child node, of a focal branch), we graft the species just below the parent node or just above the child node (using a default branch length of 0.1M years; this can be changed using the 'mindist' argument). For example, for the elephant birds, we constrained (as close as possible given the underlying tree) the split from Apterygiformes to occur at 54.16Mya, with the divergence of *Mullerornis* from the other species occurring at (or as near as possible to) 27.58Mya.
 
@@ -97,7 +99,7 @@ vaporhams <- c("x644", "x644", "FALSE", NA, NA, "Vapor_hams",
 #Just for speed, filter the main database just to include owls.
 #However, note that in this case, the 12 'AP' species are not
 #removed completely as they are already in BirdTree.
-AvotrexPhylo2 <- AvotrexPhylo[AvotrexPhylo$Order == 'Strigiformes',]
+AvotrexPhylo2 <- AvotrexPhylo[AvotrexPhylo$order == 'Strigiformes',]
 
 #Add the new owl species. The species can be added as a final row
 #to AvotrexPhylo as adding it makes no changes to other
